--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <header>Minha Lista de Tarefas</header>
+  <p id='funcionamento'>Clique duas vezes em um item para marcá-lo como completo</p>
+  <section>
+    <label for="texto-tarefa">Adicione um item à lista:</label>
+    <input type="text" name="" id="texto-tarefa">
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
