Conclusão dos Requisitos 4 e 5

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
   <header>Minha Lista de Tarefas</header>
-  <p id='funcionamento'>Clique duas vezes em um item para marcá-lo como completo</p>
+
+  <p id='funcionamento'>
+    Clique duas vezes em um item para marcá-lo como completo
+  </p>
+
   <section>
-    <label for="texto-tarefa">Adicione um item à lista:</label>
-    <input type="text" name="" id="texto-tarefa">
+    <label for='texto-tarefa'>Adicione um item à lista:</label>
+    <input type='text' name="" id='texto-tarefa'>
+    <button id='criar-tarefa'>Adicionar</button>
   </section>
+
+  <ol id='lista-tarefas'></ol>
+
   <script src="script.js"></script>
 </body>
 </html>
