--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
   <ol id='lista-tarefas'></ol>
 
+  <button id='apaga-tudo'>Limpar Lista</button>
+
   <script src="script.js"></script>
 </body>
 </html>
