Conclusão do Requisito 11

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
   <ol id='lista-tarefas'></ol>
 
-  <button id='apaga-tudo'>Limpar Lista</button>
-
+  <section id='useful-buttons'> 
+    <button id='apaga-tudo'>Limpar Lista</button>
+    <button id='remover-finalizados'>Remover Finalizados</button>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
