Conclusão do Requisito 12

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <section id='useful-buttons'> 
     <button id='apaga-tudo'>Limpar Lista</button>
     <button id='remover-finalizados'>Remover Finalizados</button>
+    <button id='salvar-tarefas'>Salvar Lista</button>
   </section>
   <script src="script.js"></script>
 </body>
