--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <button id='apaga-tudo'>Limpar Lista</button>
     <button id='remover-finalizados'>Remover Finalizados</button>
     <button id='salvar-tarefas'>Salvar Lista</button>
+    <button id='mover-cima'>Mover para Cima</button>
+    <button id='mover-baixo'>Mover para Baixo</button>
   </section>
   <script src="script.js"></script>
 </body>
