--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <button id='salvar-tarefas'>Salvar Lista</button>
     <button id='mover-cima'>Mover para Cima</button>
     <button id='mover-baixo'>Mover para Baixo</button>
+    <button id='remover-selecionado'>Remover Tarefa</button>
   </section>
   <script src="script.js"></script>
 </body>
