--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <section id='useful-buttons'> 
       <button id='apaga-tudo' class="btn btn-danger">Apagar Lista</i></button>
-      <button id='remover-finalizados' class="btn btn-primary"><i class="fa-solid fa-check"></i> Remover Finalizadas</button>
       <button id='salvar-tarefas' class="btn btn-success">Salvar Lista</button>
-      <button id='mover-cima' class="btn btn-warning"><i class="fa-solid fa-circle-up"></i> Selecionada</button>
-      <button id='mover-baixo' class="btn btn-warning"><i class="fa-solid fa-circle-down"></i> Selecionada</button>
+      <button id='remover-finalizados' class="btn btn-primary"><i class="fa-solid fa-check"></i> Remover Completas</button>
+      <button id='mover-cima' class="btn btn-warning"><i class="fa-solid fa-circle-up"></i> Subir Selecionada</button>
+      <button id='mover-baixo' class="btn btn-warning"><i class="fa-solid fa-circle-down"></i> Descer Selecionada</button>
       <button id='remover-selecionado' class="btn btn-warning">Remover Selecionada</i></button>
     </section>
   </main>
