Melhorias no HTML e CSS

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <ol id='lista-tarefas'></ol>
 
     <section id='useful-buttons'> 
-      <button id='apaga-tudo' class="btn btn-danger">Apagar Lista</i></button>
-      <button id='salvar-tarefas' class="btn btn-success">Salvar Lista</button>
-      <button id='remover-finalizados' class="btn btn-primary"><i class="fa-solid fa-check"></i> Remover Completas</button>
+      <button id='remover-selecionado' class="btn btn-danger">Remover Selecionada</i></button>
       <button id='mover-cima' class="btn btn-warning"><i class="fa-solid fa-circle-up"></i> Subir Selecionada</button>
       <button id='mover-baixo' class="btn btn-warning"><i class="fa-solid fa-circle-down"></i> Descer Selecionada</button>
-      <button id='remover-selecionado' class="btn btn-warning">Remover Selecionada</i></button>
+      <button id='remover-finalizados' class="btn btn-primary">Limpar Completas</button>
+      <button id='salvar-tarefas' class="btn btn-success">Salvar Lista</button>
+      <button id='apaga-tudo' class="btn btn-danger">Apagar Lista</i></button>
     </section>
   </main>
   <script src="script.js"></script>
