--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <h1>
       Minha Lista de Tarefas
     </h1>
-  <p id='funcionamento'>
-    Clique duas vezes em um item para marcá-lo como completo
-  </p>
+    <p id='primeiro-funcionamento'>
+      Clique <span class="bold">uma vez</span> em um item para selecioná-lo
+    </p>
+    <p id='funcionamento'>
+      Clique <span class="bold">duas vezes</span> em um item para marcá-lo como completo
+    </p>
   </header>
   <main>
     <section>
