style: Pequenas melhorias visuais e adição de icone no botão 'Limpar Concluídas'

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </ul>
   </header>
   <main>
-    <section>
+    <section id="create-task-section">
       <label for='task-text' class="form-label">Adicione um item à lista:</label>
       <input type='text' name="" id='task-text' class="form-control">
       <button id='btn-create-task' class="btn btn-primary">Adicionar</button>
@@ -34,7 +34,7 @@
       <button id='btn-remove-selected' class="btn btn-danger">Remover Selecionada</i></button>
       <button id='btn-move-up-selected' class="btn btn-warning"><i class="fa-solid fa-circle-up"></i> Subir Selecionada</button>
       <button id='btn-move-down-selected' class="btn btn-warning"><i class="fa-solid fa-circle-down"></i> Descer Selecionada</button>
-      <button id='btn-remove-completed' class="btn btn-primary">Limpar Concluídas</button>
+      <button id='btn-remove-completed' class="btn btn-primary"><i class="fa-solid fa-check"></i> Limpar Concluídas</button>
     </section>
     <section id='list-buttons'>
       <h3>Controle de Lista</h3>
